2006-05-28 Borut Razem <borut.razem@siol.net>
	* plat/win32/gpsim.nsi: removed unneeded asprintf.dll from
	  the package, added possibility to define the SETUP_DIR from
	  the NSIS command line
	* doc/gpsimWin32.html: glib-2.8.6, gtk+-2.8.17, pango-1.12.1,
	  cairo-1.0.4

2006-05-28 Roy Rankin <rrankin@ihug.com.au>
	* src/gpsim_object.cc: Improve GNU demangling
	* modules/switch.cc, modules/switch.h,
	  regression/switch_test/switch_test.asm:
	- Fix infinite regression bug.

2006-05-27 Scott Dattalo <scott@dattalo.com>
	* src/ValueCollections.cc, src/ValueCollections.h,
	src/14bit-registers.cc: An indexed collection can now accommodate
	a disjoint set.
	* src/16bit-processors.h, src/16bit-processors.cc,
	src/dspic/dspic-processors.cc, src/dspic/dspic-processors.h,
	src/processor.h, src/processor.cc, src/pic-processor.h,
	src/14bit-processors.h,src/14bit-processors.cc,
	src/pic-processor.cc: The ProgramMemoryClass now uses the newly 
	added "disjoint set" feature of an IndexedCollection to provide
	access to configuration memory. E.g. 
	
	  romData[0x300000] = 0x1234

	will write 0x1234 to the configuration word at address 0x300000. 
	In addition, infrastructure has been added to symbolically deal
	with configuration memory. E.g. 
	
	  gpsim> .CONFIG1H
	  $00000027

	  gpsim> help .CONFIG2H
	  $0000000f
	  WatchDog configuration

	Currently the configuration memory does not control any
	thing. I.e., if you write to config memory, the data changes, but
	the processor configuration is not actually changed.

	* src/hexutils.cc: removed printf debugging.

2006-05-25 Scott Dattalo <scott@dattalo.com>
	* modules/stimuli.h, modules/stimuli.cc: More support for
	  file stimulus.

2006-05-25 Scott Dattalo <scott@dattalo.com>
	* modules/logic.h, modules/logic.cc, modules/gpsim_modules.cc:
	Only use if the gui is enabled

2006-05-25 Scott Dattalo <scott@dattalo.com>
	* modules/switch.h, modules/switch.cc, modules/gpsim_modules.cc:
	  Only use gui if enabled. 