@@ -1,0 +1,68 @@
+## Makefile for building the usart_con with gcc for mingw. The build
+## uses tools running on cygwin, however.
+
+## Use: make -f makefile.mingw
+
+ifdef DEBUG
+  OPTIMIZE = -O2 -g
+else
+  OPTIMIZE = -O2
+  CLDFLAGS = -Wl,--strip-all
+endif
+
+ifndef GLIB_PATH
+  GLIB_PATH = ../../../../glib
+endif
+ifndef GTK_PATH
+  GTK_PATH = ../../../../gtk+
+endif
+ifndef PANGO_PATH
+  PANGO_PATH = ../../../../pango
+endif
+ifndef ATK_PATH
+  ATK_PATH = ../../../../atk
+endif
+ifndef CAIRO_PATH
+  CAIRO_PATH = ../../../../cairo
+endif
+
+CFLAGS = $(OPTIMIZE) $(INCLUDES) $(DEFINES) -Wall
+
+CXX = c++ -mno-cygwin -mtune=pentium -mms-bitfields
+
+.cc.o:
+	$(CXX) $(CFLAGS) -c $< -o $@
+
+################################################################
+
+# Nothing much configurable below
+
+LIBS = $(GLIB_PATH)/lib/glib-2.0.lib $(GLIB_PATH)/lib/gobject-2.0.lib \
+	$(GTK_PATH)/lib/gdk-win32-2.0.lib $(GTK_PATH)/lib/gtk-win32-2.0.lib \
+	$(CAIRO_PATH)/lib/cairo.lib \
+	../../../lib/gpsim/libgpsim.a
+
+INCLUDES = -I ../../../include \
+	-I $(GLIB_PATH)/include/glib-2.0 -I $(GLIB_PATH)/lib/glib-2.0/include \
+	-I $(GTK_PATH)/include/gtk-2.0 -I $(GTK_PATH)/lib/gtk-2.0/include \
+	-I $(PANGO_PATH)/include/pango-1.0 -I $(ATK_PATH)/include/atk-1.0 \
+	-I $(CAIRO_PATH)/include/cairo
+
+
+DEFINES += -DHAVE_GUI
+
+all :				\
+	glcd.dll 
+
+glcd_OBJECTS =			\
+	gpsim_modules.o		\
+	sed1520.o		\
+	glcd_100X32_sed1520.o
+
+################ The modules DLL
+
+glcd.dll : $(glcd_OBJECTS)
+	$(CXX) $(CFLAGS) $(CLDFLAGS) -shared -o glcd.dll ../../../lib/gpsim/modules.def $(glcd_OBJECTS) $(LIBS)
+
+clean :
+	-rm -f *.o *.dll
