@@ -33,8 +33,6 @@ Boston, MA 02111-1307, USA.  */
 #include <string>
 #include <iostream>
 
-#include "config.h"
-
 #include <gtk/gtk.h>
 
 
